<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:text="@string/welcome_words"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView_welcome" />

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radio_button_group_sensors"
        android:orientation="vertical"
        android:layout_below="@+id/textView_welcome"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp">
        <RadioButton android:id="@+id/radio_button_acc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_acc"
            android:onClick="onRadioButtonClicked" />
        <RadioButton android:id="@+id/radio_button_gyro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_gyro"
            android:onClick="onRadioButtonClicked"
            android:checked="false" />
        <RadioButton android:id="@+id/radio_button_mag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_mag"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cal_sensor_rate"
        android:id="@+id/button_calculate"
        android:layout_below="@+id/radio_button_group_sensors"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp"
        android:onClick="onCalculateButtonClicked" />

    <TextView
        android:text="@string/text_output_sensor_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView_output_sensor_type"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/button_calculate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView_output_sensor_rate"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/textView_output_sensor_type"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
